[package]
name = "hyper-rustls"
version = "0.27.5"
edition = "2021"
rust-version = "1.71"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
description = "Rustls+hyper integration for pure rust HTTPS"
homepage = "https://github.com/rustls/hyper-rustls"
repository = "https://github.com/rustls/hyper-rustls"
documentation = "https://docs.rs/hyper-rustls/"

[features]
default = ["native-tokio", "http1", "tls12", "logging"]
aws-lc-rs = ["rustls/aws_lc_rs"]
fips = ["aws-lc-rs"]
http1 = ["hyper-util/http1"]
http2 = ["hyper-util/http2"]
logging = ["log", "tokio-rustls/logging", "rustls/logging"]
native-tokio = ["rustls-native-certs"]
ring = ["rustls/ring"]
tls12 = ["tokio-rustls/tls12", "rustls/tls12"]
webpki-tokio = ["webpki-roots"]

[dependencies]
http = "1"
hyper = { git = "https://github.com/mvniekerk/hyper.git", branch = "wasix-v1.5.2" }
hyper-util = { git = "https://github.com/mvniekerk/hyper-util.git", branch = "master", default-features = false, features = ["client-legacy", "tokio"] }
log = { version = "0.4.4", optional = true }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-native-certs = { git = "https://github.com/mvniekerk/rustls-native-certs.git", branch = "main", optional = true }
rustls-platform-verifier = { version = "0.5", optional = true }
rustls = { git = "https://github.com/wasix-org/rustls", branch = "v0.22.2", default-features = false }
tokio = { version = "1.42.0", git = "https://github.com/mvniekerk/tokio.git", branch = "wasix-1.42.0" }
tokio-rustls = { git = "https://github.com/mvniekerk/tokio-rustls.git", branch = "0.25.0", default-features = false }
tower-service = "0.3"
webpki-roots = { version = "0.26", optional = true }
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
cfg-if = "1"
http-body-util = "0.1"
hyper-util = { git = "https://github.com/mvniekerk/hyper-util.git", branch = "master", default-features = false, features = ["server-auto"] }
rustls = { git = "https://github.com/wasix-org/rustls", branch = "v0.22.2", default-features = false, features = ["tls12"] }
rustls-pemfile = "2"
tokio = { version = "1.42.0", git = "https://github.com/mvniekerk/tokio.git", branch = "wasix-1.42.0", features = [
    "io-std",
    "fs",

    "macros",
    "net",
    "rt-multi-thread",
] }

[patch.crates-io]
libc = { git = "https://github.com/mvniekerk/libc", branch = "wasix-0.2.169" }
socket2 = { git = "https://github.com/mvniekerk/socket2.git", branch = "v0.5.5" }
tokio = { git = "https://github.com/mvniekerk/tokio.git", branch = "wasix-1.42.0" }
hyper = { git = "https://github.com/mvniekerk/hyper.git", branch = "wasix-v1.5.2" }

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["native-tokio", "http1"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["aws-lc-rs"]

[package.metadata.docs.rs]
no-default-features = true
features = [
    "http1",
    "http2",
    "logging",
    "native-tokio",
    "ring",
    "rustls-platform-verifier",
    "tls12",
    "webpki-tokio",
]
rustdoc-args = ["--cfg", "docsrs"]
